map not showing on mobile bug

--- a/src/components/WorldMap/Worldmap.module.scss
+++ b/src/components/WorldMap/Worldmap.module.scss
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     height: 100%; // Ensure the container fills available space
+    min-height: 200px;
 
     .mapContainer {
         width: 100%;
